--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,11 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.green {
+  color: green;
+}
+
+.red {
+  color: red;
+}
